.infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mynotes
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
