.infrastructure/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynotes-web
  namespace: mynotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynotes-web
  template:
    metadata:
      labels:
        app: mynotes-web
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: mynotes-web
          image: ghcr.io/mattdelac/mynotes-web:latest
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 100m
