.infrastructure/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynotes-web
  namespace: mynotes
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: mynotes-web-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - notes.mdelacour.com
      secretName: mynotes-web-tls
  rules:
    - host: notes.mdelacour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mynotes-web
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: mynotes
spec:
  redirectScheme:
    scheme: https
    permanent: true
